themes/main/src/sass/_post/post.scss
@import '_includes/query';
@import '_includes/variables';
@import '_includes/mixins';


#post {
  padding: 10px 15px;
  margin-top: 25px;
  @include get-font(POST);

  @include media-query(MEDIUM) {
    padding: 60px 0 0 10%;
    width: 55%;
    float: left;
  }
}


#post header {
  .hat {
    color: $red;
  }

  .title {
    color: $black;
    margin: 5px 0;
    line-height: 1.1em;
  }

  .description {
    color: $black-light;
    margin: 25px 0;
  }

  figure {
    margin: 25px 0;

    img{
      width: 100%;
    }

    figcaption{
      color: $gray;
      text-align: right;
    }
  }

  .desktop.place-and-time{
    display: none;

    @include media-query(MEDIUM) {
      display: block;
    }
  }

  .place-and-time{
    color: $gray-light;
    line-height: 1.5em;
    padding: 5px 0;
    border-top: 2px solid $gray-lighter;
    border-bottom: 2px solid $gray-lighter;

    time {
      display: block;
      font-style: italic;
    }

    .author {
      &::before {
        content: ' ';
      }
      &::after {
        content: ', ';
      }
    }

    @include media-query(MEDIUM) {
      border-top: none;
      border-bottom: none;
      color: $black;

      &:not(.desktop) time {
        display: none;
      }

      .author, .place {
        font-weight: bold;

        &::before{
          font-weight: 300;
        }
      }

      .author::after {
        content: '';
      }

      .place {
        &::before {
          content: ' ';
        }
      }
    }
  }

  @include media-query(MEDIUM) {
    figure {
      margin-left: auto;
      margin-right: auto;
      max-width: 100%;
    }
  }
}

#post .content{
  color: $black-dark;
  line-height: 1.7em;
  padding-top: 10px;
}

